fix dpd styles on mobile view

--- a/views/css/front/order-input.css
+++ b/views/css/front/order-input.css
@@ -210,8 +210,30 @@ div.form-control-chosen:focus-within {
 .dpd-select-wrapper .form-control {
   padding: .5rem 1rem;
   color: #7a7a7a;
-  background: #f6f6f6;
   border: 1px solid rgba(0,0,0,.25);
   height: 100%;
   min-height: 49px;
+}
+
+@media screen and (max-width: 1025px) {
+  .dpd-checkout-pickup-container .search-block-container select {
+    max-width: 100%;
+  }
+  .js-carrier-extra-content {
+     max-width: 100%;
+     border: none;
+     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .delivery-option {
+    display: block;
+  }
+  select.form-control:not([size]):not([multiple]) {
+    height: 3rem;
+  }
+  .dpd-checkout-pickup-container .search-block-container select {
+    width: 100%;
+  }
 }
